--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<!-- <app-barchart></app-barchart> -->
-<!-- <app-piechart></app-piechart> -->
-<app-densitymap></app-densitymap>
+<div>
+    <button routerLink="barchart">Bar Chart</button>
+    <button routerLink="piechart">Pie Chart</button>
+    <button routerLink="densitymap">Density Map</button>
+    <button routerLink="linechart">Line Chart</button>
+</div>
+
+<div>
+    <router-outlet></router-outlet>
+</div>
