--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div>
-    <button routerLink="barchart">Bar Chart</button>
-    <button routerLink="piechart">Pie Chart</button>
-    <button routerLink="densitymap">Density Map</button>
-    <button routerLink="linechart">Line Chart</button>
+    <button routerLink="barchart" routerLinkActive="active" class="button">Bar Chart</button>
+    <button routerLink="piechart" routerLinkActive="active" class="button">Pie Chart</button>
+    <button routerLink="densitymap" routerLinkActive="active" class="button">Density Map</button>
+    <button routerLink="linechart" routerLinkActive="active" class="button">Line Chart</button>
 </div>
 
 <div>
