--- a/src/app/components/linechart/linechart.component.html
+++ b/src/app/components/linechart/linechart.component.html
@@ -1,1 +1,5 @@
-<p-chart type="line" [data]="data" [options]="options"></p-chart>
+
+    <div class="line-chart">
+        <p-chart type="line" [data]="data" [options]="options"></p-chart>
+    </div>
+
