--- a/src/app/components/barchart/barchart.component.html
+++ b/src/app/components/barchart/barchart.component.html
@@ -1,16 +1,21 @@
-<div>
-    <label for="month">Select Month:</label>
-    <select id="month" [(ngModel)]="selectedMonth" (change)="onMonthChange(selectedMonth)">
-      <option *ngFor="let month of months" [value]="month">{{ month }}</option>
+<div class="selector-container">
+  <div class="month-selector">
+    <label for="month" class="selector-label">Select Month:</label>
+    <select id="month" [(ngModel)]="selectedMonth" (change)="onMonthChange(selectedMonth)" class="selector">
+        <option *ngFor="let month of months" [value]="month">{{ month }}</option>
     </select>
   </div>
-  <div>
-    <label for="year">Select Year:</label>
-    <select id="year" [(ngModel)]="selectedYear" (change)="onYearChange(selectedYear)">
+
+  <div class="year-selector">
+    <label for="year" class="selector-label">Select Year:</label>
+    <select id="year" [(ngModel)]="selectedYear" (change)="onYearChange(selectedYear)" class="selector">
       <option *ngFor="let year of years" [value]="year">{{ year }}</option>
     </select>
   </div>
+</div>
+
   <div class="chart">
+    Day-wise Registration Count
     <p-chart type="bar" [data]="data"></p-chart>
   </div>
   
